<resources>
    <string name="app_name">掌上校园</string>
    <string name="app_slogan">简约精彩分享</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_1">首页</string>
    <string name="menu_2">消息</string>
    <string name="menu_3">发现</string>
    <string name="menu_4">更多</string>
    <string name="navigation_theme">主题</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_share">分享</string>
    <string name="navigation_evaluate">评价</string>
    <string name="navigation_about">关于</string>
    <string name="has_released">正在上映</string>
    <string name="going_to_release">即将上映</string>
    <string name="title_activity_about">关于</string>
    <string name="day_night_mode">日夜模式</string>
    <string name="day_mode">日间模式</string>
    <string name="theme_mode">主题风格</string>
    <string name="night_mode">夜间模式</string>
    <string name="primary_color">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;色</string>
    <string name="accent_color">配&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;色</string>
    <string name="data_loading">正在加载</string>
    <string name="has_no_data">暂无数据</string>
    <string name="hour_min">时&#160;&#160;:&#160;&#160;分</string>
    <string name="format_hour_min">%1$s&#160;&#160;:&#160;&#160;%2$s</string>
    <string name="format_hour_min2">%1$s:%2$s</string>
    <string name="grade">评&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;分</string>
    <string name="release_date">上映日期</string>
    <string name="type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型</string>
    <string name="director">导&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;演</string>
    <string name="starring">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;演</string>
    <string name="story_brief">剧情简介</string>
    <string name="release_info">上映信息</string>
    <string name="location_default">位置</string>
    <string name="permission_title">提示</string>
    <string name="permission_msg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="settings">设置</string>
    <string name="cancel">取消</string>
    <string name="revoke">撤销</string>
    <string name="hint_located_city">定位成功，你所在的地区是：%s</string>
    <string name="confirm">确定</string>
    <string name="locate_again">重新定位</string>
    <string name="hint_input_city_manually">定位无力？我要手动输入</string>
    <string name="hint_distract_input">如：滨州</string>
    <string name="hint_distract">市（区/县）</string>
    <string name="hint_distract_input_empty">输入的地区名称为空</string>
    <string name="welcome">很高兴认识你</string>
    <string name="contact_me">联系我</string>
    <string name="open_source_address">项目已开源，喜欢就star一个哦</string>
    <string name="thanks">致谢</string>
    <string name="welcome_detail">我是一枚展示所在城市热映电影资讯和票房的小小应用，万分荣幸入驻你的手机。我简单但颜值高，善变（多色主题自由搭配）却体贴（夜间模式护眼），总有一种性格与你的气质相配。简约，优雅，精彩，即看即走，全都来自处女座作者的“斤斤计较”。希望你喜欢。o(*￣︶￣*)o</string>
    <string name="github_page">https://github.com/GolvenH/PocketCampus</string>
    <string name="open_source_permission">开源许可</string>
    <string name="license"><![CDATA[<u>LICENSE</u>]]></string>
    <string name="thanks_list">强大的开源社区GitHub\niconfont.cn的海量图标资源</string>
    <string name="share_out_description">"简影讯，简约多彩影讯。速查热门电影影讯、评分和票房，即看即走。下载地址：https://fir.im/jyx"</string>
    <string name="hint_query_by_upper_city">使用【%1$s】查询无数据，使用其上级行政区【%2$s】查询？</string>
    <string name="questionnaire_url">https://gdgdocs.org/forms/d/e/1FAIpQLSdQF1HvXnvx_vki00RUTKR3PP0-ghTpYoxjfZCZWs5IAH41Pw/viewform</string>
    <string name="hint_auto_day_night_disabled">自动切换日夜模式已关闭，到“设置”中可再开启</string>
    <string name="box_office">票房</string>
    <string name="box_office_day">单日</string>
    <string name="box_office_weekend">周末</string>
    <string name="box_office_week">单周</string>
    <string name="box_office_month">单月</string>
    <string name="hint_box_office_day">单日票房（万）</string>
    <string name="hint_box_office_sum">累计票房（万）</string>
    <string name="hint_released_days">上映天数</string>
    <string name="hint_box_office_rate">环比变化</string>
    <string name="hint_average_price">平均票价</string>
    <string name="hint_wom_index">口碑指数</string>
    <string name="hint_box_office_weekend">周末票房（万）</string>
    <string name="hint_box_office_week">单周票房（万）</string>
    <string name="hint_box_office_month">单月票房（万）</string>
    <string name="hint_playing_days_in_the_month">月内天数</string>
    <string name="hint_playing_rate_in_the_month">月内占比</string>
    <string name="hint_box_office_attention">票房数据由第三方提供，提示：\n1. 单日票房数据统计实时性较高，其余仅供参考；\n2. 单月票房排名按照月票房成绩，而非累计票房。</string>
    <string name="key_first_time">key_first_time</string>
    <string name="key_auto_day_night">key_auto_day_night</string>
    <string name="key_day_mode_time">key_day_mode_time</string>
    <string name="key_night_mode_time">key_night_mode_time</string>
    <string name="key_upper_city">key_upper_city</string>
    <string name="key_inputted_city">key_inputted_city</string>
    <string name="key_cache">key_cache</string>
    <string name="key_city">key_city</string>
    <string name="key_changeicons">key_changeicons</string>
    <string name="key_changetime">key_changetime</string>
    <string name="key_notmodel">key_notmodel</string>
    <string name="key_feedback">key_feedback</string>
    <string name="key_logout">key_logout</string>
    <string name="action_locate_succeed">key_locate_succeed</string>
    <string name="param_is_upper_city">param_is_upper_city</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_home_name">yhd</string>
    <string name="lock_user_info">查看我的个人主页</string>
    <string name="feed_back">意见反馈</string>
    <string name="common_setting">通用设置</string>
    <string name="about_app">关于App</string>
    <string name="app_slogan_text">Tips :可到 “通用设置” 中“开启”定时自动切换日夜模式。</string>
    <string name="title_activity_login">Sign in</string>
    <string name="default_required_validation_message">不能为空</string>
    <string name="default_required_length_message_min_max">长度必须在 %1$d 和 %2$d 之间.</string>
    <string name="default_required_length_message_min">长度不能低于 %1$d.</string>
    <string name="default_required_length_message_max">长度不能超过 %1$d.</string>
    <string name="default_regex_validation_message">输入格式不正确.</string>
    <string name="confirm_password_error">两次密码输入不一致</string>
    <string name="prompt_email">Email</string>
    <string name="phone_login">手机号</string>
    <string name="password_logon">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_phone">此手机号长度无效</string>
    <string name="error_invalid_password">这个密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"提供手机号码完成所需的联系人权限。"
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_sign_up_login">SignUpLoginActivity</string>
    <string name="multi_city">开启多城市</string>
    <string name="no_network">网络不好(˵¯͒⌢͗¯͒˵)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="headerTxt">看天气</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_error">出了点小问题，别担心，( •̀ .̫ •́ )✧</string>
    <string name="version_name">就看天气 Version-</string>
    <string name="can_not_find_version_name">找不到版本号</string>
    <string name="share_txt">欢迎使用“就看天气”，希望每天都是好心情，您可以在http://www.wandoujia.com/apps/com.xiecc.seeWeather下载</string>
    <string name="share_app">分享-就看天气</string>
    <string name="alipay">xcc3641@163.com</string>
    <string name="app_html">https://github.com/xcc3641/SeeWeather</string>
    <string name="readme">https://github.com/xcc3641/SeeWeather/blob/master/README.md</string>
    <string name="chage_icon">更换图标</string>
    <string name="nav_city">选择城市</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="multi_cities">多城市管理</string>
    <string name="double_exit">再按一次退出</string>
    <string name="complete">加载完毕，✺◟(∗❛ัᴗ❛ั∗)◞✺,</string>
    <string name="errorLocation">定位失败,加载默认城市</string>
    <string name="aboutContent">就看天气该应用就是如同它的名字一样，只做一个单纯、简单的看天气软件。这么多天气软件，你选择了我，这是我的幸运。\n从15年10月上线，到目前经历两次重大改版，一次代码的重构，一次界面的大幅度改动，目的都是为了你们。
    在开源的过程中，收到了很多来自有趣的你们的邮件。\n我也曾遇到过棘手的问题无处咨询又谷歌不到。那个时候的我，也可能是现在的你。所以我希望能够帮助到你。</string>
    <string name="open_source">• RxJava: github.com/ReactiveX/RxJava\n• RxAndroid: github.com/ReactiveX/RxAndroid\n• Retrofit: github.com/square/retrofit\n• Glide: github.com/bumptech/glide\n• YujunZhu 设计师提供多城市卡片设计\n• 和风天气提供数据支持\n• 高德定位提供位置定位服务</string>
    <string name="bugTableUrl">https://www.wenjuan.com/s/YbqANfc/</string>
    <string-array name="icons">
        <item>图标一</item>
        <item>图标二</item>
    </string-array>
    <string-array name="cache_time">
        <item>禁止刷新</item>
        <item>每1小时</item>
        <item>每3小时</item>
        <item>每6小时</item>
    </string-array>
    <string name="title_activity_weather">天气</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_meedit">个人资料</string>
    <string name="title_activity_re_passwd">重置密码</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="quit">退出</string>
    <string name="dialog_tips">大家好，\n\t\t\t\t\t该应用源码中不提供应用key,如果你需要查看该源码效果，请自行到官网申请key。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)的onCreate方法中完成初始化操作!</string>
    <string name="title_activity_people_chat">私聊</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>
    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="lost">失物</string>
    <string name="found">招领</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="list_no_data_lost">暂时还未有失物信息</string>
    <string name="list_no_data_found">暂时还未有招领信息</string>
    <string name="title_hint">标题</string>
    <string name="describe_hint">描述</string>
    <string name="photo_hint">手机</string>
    <string name="progress_loading">正在获取数据..</string>
    <string name="title_activity_my_share">MyShareActivity</string>
</resources>